[tool.poetry]
name = "pytorch-ssd"
version = "0.1.0"
description = ""
authors = ["Masato Tsuchiya <malk271828@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^4.2.0"
numpy = "1.15.0"
pandas = "^1.0.4"
Boto3 = "^1.14.2"
torch = "^1.5.0"
torchvision = "^0.6.0"
mlflow = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
